# draw-uml-backend

./: .coverage  .gitignore  Dockerfile  Pipfile  Procfile  README.md  __main__.sqlite3  _base.py  _dev.py  _types.py  app.py  class_builder.py  code_reader.py  completelynew.py  design_doc.md  diagram_generator.py  diagrams.md  dictionary_  dictionary_of_types.py  drawSQL.sql  existing_code_response.json  generate_types.py  models.py  output_code.py  parse.py  pyproject.toml  re_write_existing_code.py  read_existing_code.py  requirements.txt  requirements_dev.txt  responses_test_io.py  responses_test_side_effects.py  responses_types_output.py  responsescode_output.py  responsesdiagrams_output.md  responsesnew_code_response.json  setup.cfg  setup.py  sql_code.sql  sql_code_representation.json  (+9 more)
.dev_logs/: base.txt  buffer.txt  release_notes.txt  results.xml
comment_generator/: any_symbol.txt  main.py  mainjs.py  result_file.js  result_file.py  test_file.py
fast_prototyping/: mainjs.py
integration_tests/: test_server.py
interfaces/: os_interface.py
main_test_generator/: main.py  main2.py  main_js.py
output/: _types.py  anotherclass.py  classroom.py  codereader(abc).py  comandmanager.py  commander.py  compelted.py  completedfile.py  completelynew.py  computer.py  conftest.py  controller.py  databaseinterface.py  datapipeline.py  design_doc.md  exceldatabase.py  managercoordinator.py  manual_test_anotherclass.py  manual_test_comandmanager.py  manual_test_computer.py  manual_test_exceldatabase.py  manual_test_operatingsysteminterface.py  operatingsysteminterface.py  person.py  student.py  test_io_anotherclass.py  test_io_codereader(abc).py  test_io_comandmanager.py  test_io_commander.py  test_io_compelted.py  test_io_completelynew.py  test_io_computer.py  test_io_controller.py  test_io_databaseinterface.py  test_io_datapipeline.py  (+23 more)
(+93 files in other folders)
