[metadata]
name = draw_uml_backend
description = Backend of the draw_uml_backend v.0.2
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    draw_uml_backend
install_requires =
    anyio>=3.6.1
    boto3>=1.24.43
    botocore>=1.27.43
    certifi>=2022.6.15
    charset-normalizer>=2.1.0
    click>=8.1.3
    colorama>=0.4.4
    cycler>=0.11.0
    docutils>=0.16
    ecdsa>=0.18.0
    et-xmlfile>=1.1.0
    fastapi>=0.79.0
    Flask>=2.1.2
    fonttools>=4.34.4
    greenlet>=1.1.2
    gunicorn>=20.1.0
    h11>=0.13.0
    idna>=3.3
    importlib-metadata>=4.12.0
    itsdangerous>=2.1.2
    Jinja2>=3.1.2
    jmespath>=1.0.1
    kiwisolver>=1.4.4
    MarkupSafe>=2.1.1
    matplotlib>=3.5.2
    numpy>=1.22.4
    openpyxl>=3.0.10
    packaging>=21.3
    pandas>=1.4.2
    Pillow>=9.2.0
    pyasn1>=0.4.8
    pydantic>=1.9.1
    pyparsing>=3.0.9
    python-dateutil>=2.8.2
    python-jose>=3.3.0
    python-multipart>=0.0.5
    pytz>=2022.1
    PyYAML>=5.4.1
    requests>=2.28.1
    rsa>=4.7.2
    s3transfer>=0.6.0
    six>=1.16.0
    sniffio>=1.2.0
    SQLAlchemy>=1.4.36
    starlette>=0.19.1
    typing-extensions>=4.3.0
    urllib3>=1.26.10
    uvicorn>=0.18.2
    Werkzeug>=2.1.2
    zipp>=3.8.1

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage>=6.4.4

[options.package_data]
draw_uml_backend = py.typed

[flake8]
max-line-length = 160